--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -8,9 +8,9 @@
 <div class="jumbotron">
     <div class="container">
         <div class="row">
-            <div class="col-md-12">
-                <h1 class="text-center">{{this.title}}</h1>
-                <h2 class="text-center">{{this.abstract}}</h2>
+            <div class="col-md-12 text-center">
+                <h1>{{this.title}}</h1>
+                <h2>{{this.tagline}}</h2>
              </div>
         </div>
     </div>
