--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -7,7 +7,7 @@
         <div class="row">
             <div class="col-md-7">
                 <h1>{{this.title}}</h1>
-                <p>{{this.abstract}}</p>
+                <p>{{this.description}}</p>
                 {{this.body}}
             </div>
         </div>
