--- a/_layouts/users_index.html
+++ b/_layouts/users_index.html
@@ -7,14 +7,19 @@
         <div class="row">
             <div class="col-md-7">
                 <h1>{{this.title}}</h1>
-                <p>{{this.abstract}}</p>
-                {{this.body}}
+                <p>{{this.description}}</p>
             </div>
         </div>
     </div>
 </div>
 
 <div class="container">
+
+    <div class="row">
+        <div class="col-md-7">
+            {{this.body}}
+        </div>
+    </div>
 
     <div class="row">
 
