--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -38,9 +38,6 @@
         {% endblock %}
 
         <div class="col-md-6" data-spy="scroll" data-target="#sidenav" role="main">
-            {% if this.lastedit|d %}
-            <p><em>{{this.lastedit}}</em></p>
-            {% endif %}
             {% block preamble %}
             {% endblock %}
             {% if this.description|d %}
@@ -52,15 +49,7 @@
         </div>
     </div>
 
-    <div class="footer">
-        <div style="margin: 10px">
-        {% include 'sharing.html' %}
-        </div>
-        <p class="text-center"> Content licensed under the
-           <a href="{{site.reflinks.license.url}}">{{site.reflinks.license.title}}</a> license.
-           See <a href="{{site.reflinks['/terms-of-use'].url}}">Terms of Use</a>.
-        </p> 
-    </div>
+    {% include 'footer.html' %}
 </div> 
 
 {% endblock %}
