Use markdown in keys on example pages

--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -7,8 +7,7 @@
         <div class="row">
             <div class="col-md-7">
                 <h1>{{this.title}}</h1>
-                <p>{{this.description}}</p>
-                {{this.body}}
+                {{this.description}}
             </div>
         </div>
     </div>
