--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -37,15 +37,17 @@
         </div>
         {% endblock %}
 
-        <div class="col-md-6" data-spy="scroll" data-target="#sidenav" role="main">
-            {% block preamble %}
+        <div class="content">
+            {% block content_div %}
+            <div class="col-md-6" data-spy="scroll" data-target="#sidenav" role="main">
             {% endblock %}
-            {% if this.description|d %}
-            <p class="lead">{{this.description}}</p>
-            {% endif %}
-
-            {{this.body}}
-
+                {% block preamble %}
+                {% endblock %}
+                {% if this.description|d %}
+                <p class="lead">{{this.description}}</p>
+                {% endif %}
+                {{this.body}}
+            </div>
         </div>
     </div>
 
