--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -22,7 +22,7 @@
 
 <div class="container">
   <div class="row">
-    <div class="col-md-6 text-center">
+    <div class="col-md-5 col-md-offset-1 text-center">
       {% set news = site.reflinks['/news/releases'].content[0] %}
       <div class="panel panel-default">
         <div class="panel-heading">Release news</div>
@@ -31,7 +31,7 @@
         </div>
       </div>
     </div>
-    <div class="col-md-6 text-center">
+    <div class="col-md-5 text-center">
       {% set news = site.reflinks['/news/general'].content[0] %}
       <div class="panel panel-default">
         <div class="panel-heading">General news</div>
