--- a/_layouts/newsfeed.html
+++ b/_layouts/newsfeed.html
@@ -9,9 +9,10 @@
         <div class="col-md-8 role="main">
             {% for item in this.content %}
                 <div class="page-header">
-                    <h1>{{item.title}}&nbsp;&nbsp;<small>{{item.date|dateformat}}</small></h1>
+                    <h1>{{item.title}}</h1>
                 </div>
                 <div class="lead">
+                    <p class="text-muted">{{item.date|dateformat}}</p>
                     {{item.body}}
                 </div>
             {% endfor %}
