--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -29,7 +29,7 @@
                  data-offset-top="80" 
                  data-offset-bottom="60">
                 <div class="well">
-                    <a href="#"><em>{{this.title}}</em></a>
+                    <a href="#"><strong style="font-size:90%">{{this.title}}</strong></a>
                     {{this.toc}}
                 </div>
             </div>
