--- a/_layouts/footer.html
+++ b/_layouts/footer.html
@@ -2,16 +2,16 @@
         <div style="margin: 8px">
         {% include 'sharing.html' %}
         </div>
-        {% if this.lastedit|d %}
-        <p>{{this.lastedit}}.</p>
-        {% endif %}
+        <p></p>
+        <p>
+           <a href="{{site.reflinks.site_myhdl_src.url}}">Website source</a>
         <p>
            Content licensed under the
            <a href="{{site.reflinks.license.url}}">{{site.reflinks.license.title}}</a> license.
-           See <a href="{{site.reflinks['/terms-of-use'].url}}">Terms of Use</a>.
+           See <a href="{{site.reflinks['/terms-of-use'].url}}">Terms of Use</a>
         </p> 
         <p>
-           Website powered by <a href="{{site.reflinks.urubu.url}}">{{site.reflinks.urubu.title}}</a>.
+           Powered by <a href="{{site.reflinks.urubu.url}}">{{site.reflinks.urubu.title}}</a>
         </p> 
     </div>
 
