--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -16,6 +16,8 @@
  </div>
 </div>
 
+<main>
+
 <div class="container">
 {{this.body}}
 </div>
@@ -42,6 +44,8 @@
    </div>
   </div>
 </div>
+
+</main>
 
 {% include 'footer.html' %}
 
