--- a/_layouts/wide_article.html
+++ b/_layouts/wide_article.html
@@ -1,6 +1,6 @@
 {% extends "article.html" %}
 
             {% block content_div %}
-            <div class="col-md-9" data-spy="scroll" data-target="#sidenav" role="main">
+            <div class="col-md-9" role="main">
             {% endblock %}
 
