--- a/_layouts/newsfeed.html
+++ b/_layouts/newsfeed.html
@@ -6,7 +6,8 @@
 
     <div class="row">
 
-        <div class="col-md-8 role="main">
+        <div class="col-md-8" role="main">
+        <main>
             {% for item in this.content %}
                 <div class="page-header">
                     <h1>{{item.title}}</h1>
@@ -16,6 +17,7 @@
                     {{item.body}}
                 </div>
             {% endfor %}
+        </main>
         </div>
 
     </div>
