--- a/_layouts/users_index.html
+++ b/_layouts/users_index.html
@@ -25,7 +25,7 @@
 
         {% block index_list %}
         {% for item in this.content %}
-            <div class="col-sm-6 col-lg-4" role="main">
+            <div class="col-sm-6 col-lg-4">
                     <h4><a href="{{item.url}}">{{item.title}}</a>&nbsp;&nbsp;</h4>
                     <p>{{item.description}}</p>
             </div>
