--- a/_layouts/newsfeed.html
+++ b/_layouts/newsfeed.html
@@ -7,14 +7,15 @@
     <div class="row">
 
         <div class="col-md-8" role="main">
+        <div class="page-header">
+           <h1>{{ this.title }}</h1>       
+        </div>
         <main>
             {% for item in this.content %}
-                <div class="page-header">
-                    <h1>{{item.title}}</h1>
-                </div>
+                <h2><small style="font-family:monospace;">{{item.date|dateformat}}</small>
+                    &nbsp; {{item.title}}</h2>
                 <div class="lead">
-                    <p class="text-muted">{{item.date|dateformat}}</p>
-                    {{item.body}}
+                  {{item.body}}
                 </div>
             {% endfor %}
         </main>
