--- a/_layouts/twitter_timeline.html
+++ b/_layouts/twitter_timeline.html
@@ -2,7 +2,7 @@
    href="https://twitter.com/MyHDL"
 	 data-widget-id="699541526385451008"
 	 data-height="320"
-	 data-chrome="nofooter noheader"
+	 data-chrome="nofooter noheader noborders"
 	 >
   Tweets by @MyHDL
 </a>
